--- a/package.json
+++ b/package.json
@@ -13,13 +13,23 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "child_process": "^1.0.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
-    "next": "13.4.6",
+    "gapi": "^0.0.3",
+    "googleapis": "^118.0.0",
+    "googleauth": "^3.0.2",
+    "next": "^13.4.8-canary.11",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "browser": {
+    "fs": false,
+    "os": false,
+    "path": false
   }
 }
