--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "gapi": "^0.0.3",
@@ -32,5 +33,8 @@
     "fs": false,
     "os": false,
     "path": false
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
   }
 }
