--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.19",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -22,10 +25,12 @@
     "gapi": "^0.0.3",
     "googleapis": "^118.0.0",
     "googleauth": "^3.0.2",
+    "material": "^0.7.8",
     "next": "^13.4.12",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.20.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
   },
