--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "child_process": "^1.0.2",
+    "console": "^0.7.2",
     "cors": "^2.8.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
