--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.14.19",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -32,7 +33,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.20.1",
-    "tailwindcss": "3.3.2",
+    "tailwindcss": "^3.3.2",
     "typescript": "5.1.3"
   },
   "browser": {
