--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@mui/material": "^5.14.19",
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@supabase/supabase-js": "^2.48.1",
+    "@tailwindcss/postcss": "^4.0.6",
+    "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.21.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -38,16 +42,13 @@
     "googleauth": "^3.0.2",
     "lucide-react": "^0.475.0",
     "material": "^0.7.8",
-    "next": "^14.1.4",
+    "next": "^15.1.7",
     "next-auth": "^5.0.0-beta.25",
-    "postcss": "8.4.24",
+    "postcss": "^8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.20.1",
     "shadcdn": "^0.0.8",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^3.3.2",
-    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.3"
   },
   "browser": {
@@ -56,6 +57,7 @@
     "path": false
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^5.66.0",
     "@types/cors": "^2.8.17",
     "@types/uuid": "^10.0.0",
     "prisma": "^6.3.1"
