--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "baseUrl": "."
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/Fader.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "prisma/*.sql"]
 }
