--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@prisma/extension-accelerate": "^1.2.2",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
@@ -30,6 +32,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@vercel/blob": "^0.27.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "child_process": "^1.0.2",
@@ -37,6 +40,7 @@
     "clsx": "^2.1.1",
     "console": "^0.7.2",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "gapi": "^0.0.3",
@@ -48,6 +52,7 @@
     "next-auth": "^5.0.0-beta.25",
     "postcss": "^8.4.24",
     "react": "18.2.0",
+    "react-day-picker": "^9.4.3",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.20.1",
     "shadcdn": "^0.0.8",
