--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "^6.20.1",
     "shadcdn": "^0.0.8",
+    "tailwind-merge": "^3.0.1",
     "typescript": "5.1.3"
   },
   "browser": {
