--- a/package.json
+++ b/package.json
@@ -50,13 +50,14 @@
     "material": "^0.7.8",
     "next": "^15.1.7",
     "next-auth": "^5.0.0-beta.25",
-    "postcss": "^8.4.24",
+    "postcss": "^8.5.2",
     "react": "18.2.0",
     "react-day-picker": "^9.4.3",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.20.1",
     "shadcdn": "^0.0.8",
     "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.6",
     "typescript": "5.1.3"
   },
   "browser": {
