--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma generate --no-engine && next build",
     "start": "next start",
-    "export": "next export",
-    "lint": "next lint",
-    "fix-db": "ts-node -r tsconfig-paths/register scripts/fix-replica-identity.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
