--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.14.19",
+    "@next/env": "^15.1.7",
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.2",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -50,7 +51,7 @@
     "next-auth": "^5.0.0-beta.25",
     "postcss": "^8.5.2",
     "react": "18.2.0",
-    "react-day-picker": "^9.4.3",
+    "react-day-picker": "^9.5.1",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.20.1",
     "shadcdn": "^0.0.8",
@@ -67,6 +68,7 @@
     "@tanstack/react-query-devtools": "^5.66.0",
     "@types/cors": "^2.8.17",
     "@types/uuid": "^10.0.0",
+    "daisyui": "^5.0.0-beta.8",
     "prisma": "^6.3.1"
   }
 }
