--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,7 @@
 {
     "version": "0.2.0",
     "configurations": [
+
       {
         "name": "Next.js: debug client-side",
         "type": "chrome",
@@ -17,6 +18,8 @@
         "name": "Next.js: debug server-side",
         "type": "node",
         "request": "launch",
+        "envFile": "${workspaceFolder}/.env.local",
+        "env": {},
         "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/next",
         "args": ["dev"],
         "console": "integratedTerminal",
