--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.2",
     "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
@@ -42,6 +44,7 @@
     "date-fns": "^3.6.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "export-to-csv": "^1.4.0",
     "gapi": "^0.0.3",
     "googleapis": "^118.0.0",
     "googleauth": "^3.0.2",
@@ -49,10 +52,13 @@
     "material": "^0.7.8",
     "next": "^15.1.7",
     "next-auth": "^5.0.0-beta.25",
+    "papaparse": "^5.5.2",
     "postcss": "^8.5.2",
     "react": "18.2.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.54.2",
+    "react-image-crop": "^11.0.7",
     "react-router-dom": "^6.20.1",
     "shadcdn": "^0.0.8",
     "tailwind-merge": "^3.0.1",
@@ -67,6 +73,7 @@
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.66.0",
     "@types/cors": "^2.8.17",
+    "@types/papaparse": "^5.3.15",
     "@types/uuid": "^10.0.0",
     "daisyui": "^5.0.0-beta.8",
     "prisma": "^6.3.1"
