--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/env": "^15.1.7",
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.2",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
@@ -60,10 +61,12 @@
     "react-hook-form": "^7.54.2",
     "react-image-crop": "^11.0.7",
     "react-router-dom": "^6.20.1",
+    "react-use-measure": "^2.1.7",
     "shadcdn": "^0.0.8",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "use-debounce": "^10.0.4"
   },
   "browser": {
     "fs": false,
